@@ -7,7 +7,8 @@
   {erts, [{mod_cond, all}, {app_file, keep}]},
   {rel, "cloudi_hello_world2", "1",
    [
-    hello_world2
+    hello_world2,
+    cloudi_core
    ]},
   {rel, "start_clean", "",
    [
@@ -23,14 +24,6 @@
   {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                       "^erts.*/(doc|info|include|lib|man|src)"]},
   {app, hipe, [{incl_cond, exclude}]},
-  {app, cloudi_core,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_services_internal,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_services_databases,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
-  {app, cloudi_services_messaging,
-   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, hello_world2,
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}, {lib_dir, "."}]}
 ]}.
