@@ -8,7 +8,8 @@
   {app_file, keep},
   {rel, "cloudi_hello_world3", "1",
    [
-    hello_world3
+    hello_world3,
+    cloudi_core
    ]},
   {rel, "start_clean", "",
    [
