@@ -1,6 +1,6 @@
 {application, reltool_util,
   [{description, "Reltool Utility Functions"},
-   {vsn, "0.5.0"},
+   {vsn, "0.6.0"},
    {modules, [reltool_util]},
    {registered, []},
    {applications, [stdlib, kernel]},
